[tool.poetry]
name = "osint-backend"
version = "0.1.0"
description = "OSINT investigation platform backend"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.34" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0" }
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = { extras = ["email"], version = "^2.10" }
pydantic-settings = "^2.7"
redis = { extras = ["hiredis"], version = "^5.2" }
celery = { extras = ["redis"], version = "^5.4" }
neo4j = "^5.27"
minio = "^7.2"
python-jose = { extras = ["cryptography"], version = "^3.3" }
passlib = { extras = ["bcrypt"], version = "^1.7" }
httpx = "^0.28"
anthropic = "^0.49"
structlog = "^25.1"
python-multipart = "^0.0.20"
pyyaml = "^6.0"
qdrant-client = {extras = ["fastembed"], version = "^1.13"}
openai = "^1.0"
tavily-python = "^0.3"
langgraph = "^0.2"
langchain-core = "^0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
pytest-cov = "^6.0"
pytest-randomly = "^3.15"  # Randomise test order to catch order-dependent failures. (#40)
httpx = "^0.28"
factory-boy = "^3.3"
ruff = "^0.9"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM"]
ignore = ["ANN101", "ANN102"]

# STDIO BANNED: RCE vulnerability (April 2026)
# mcp.client.stdio and mcp.server.stdio are prohibited in this codebase.
# All MCP integrations must use HTTP/SSE transport exclusively.
# See backend/.ruff_mcp_stdio_ban.py for rationale.
banned-module-level-imports = ["mcp.client.stdio", "mcp.server.stdio"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# -p randomly enables test order randomisation; --randomly-seed=last re-runs the
# exact failing seed when an order-dependent failure is found. (#40)
addopts = "-v --tb=short --cov=src --cov-report=term-missing -p randomly"
filterwarnings = ["ignore::DeprecationWarning"]
